--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "hamburger-react": "^2.5.0",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.0",
+    "images-downloader": "^1.0.3",
     "moment": "^2.29.4",
     "next": "12",
     "next-pwa": "^5.5.4",
